@@ -3,8 +3,8 @@ package com.jobtracker.core.service;
 import com.jobtracker.core.dto.MetricsResponse;
 import com.jobtracker.core.dto.SankeyLink;
 import com.jobtracker.core.model.*;
+import com.jobtracker.core.repository.JobDetailRepository;
 import com.jobtracker.core.repository.JobRepository;
-import com.jobtracker.core.repository.StageEventRepository;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.Mock;
@@ -12,8 +12,6 @@ import org.mockito.MockitoAnnotations;
 import org.springframework.test.util.ReflectionTestUtils;
 
 import java.time.Instant;
-import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.concurrent.atomic.AtomicLong;
 
@@ -23,11 +21,13 @@ import static org.mockito.Mockito.when;
 
 class MetricsServiceTests {
 
+    private static final Instant T0 = Instant.parse("2026-01-01T00:00:00Z");
+
     @Mock
     private JobRepository jobs;
 
     @Mock
-    private StageEventRepository stageEvents;
+    private JobDetailRepository jobDetails;
 
     private MetricsService metricsService;
 
@@ -36,65 +36,72 @@ class MetricsServiceTests {
     @BeforeEach
     void setUp() {
         MockitoAnnotations.openMocks(this);
-        metricsService = new MetricsService(jobs, stageEvents);
+        metricsService = new MetricsService(jobs, jobDetails);
     }
 
-    private Job newJob(User owner, Source source, Stage stage, Outcome outcome) {
+    private Job newJob(User owner, SourceCategory source, Stage stage, Outcome outcome) {
         return newJob(owner, source, stage, outcome, "Acme");
     }
 
-    private Job newJob(User owner, Source source, Stage stage, Outcome outcome, String company) {
-        Job job = new Job(company, "Engineer", owner, source, null, null, null, null, null);
-        job.applyUpdate(company, "Engineer", null, null, null, null, null, null, stage, outcome);
+    private Job newJob(User owner, SourceCategory source, Stage stage, Outcome outcome, String company) {
+        Job job = new Job(company, "Engineer", owner, source, null, null, null, null);
+        job.applyUpdate(company, "Engineer", source, null, null, null, null, stage, outcome);
         ReflectionTestUtils.setField(job, "id", nextJobId.incrementAndGet());
         return job;
     }
 
-    // Adds a terminal FINALIZED event on closed jobs so tests prove it's excluded from "furthest reached".
-    private List<StageEvent> stageHistory(Job job, Stage furthest, Outcome outcome) {
-        List<StageEvent> events = new ArrayList<>();
+    // Walks the pipeline up to `furthest`, then adds a terminal FINALIZED on closed jobs so tests
+    // prove it's excluded from "furthest reached".
+    // findJourneysByOwnerId returns the projection, not the whole document.
+    private JobJourney journey(JobDetail detail) {
+        return new JobJourney(detail.getJobId(), detail.getStageHistory(), detail.getInterviews());
+    }
+
+    // Mirrors what findJourneysByOwnerId returns: the projection, not the whole document.
+    private JobJourney detail(Job job, Stage furthest, Outcome outcome, InterviewRound... rounds) {
+        JobDetail detail = new JobDetail(job.getId(), 1L, null, null);
+        Instant at = T0;
         for (Stage stage : Stage.values()) {
             if (stage == Stage.FINALIZED) {
                 break;
             }
-            events.add(new StageEvent(job, stage, Instant.now(), null));
+            detail.recordStage(stage, at, null);
+            at = at.plusSeconds(60);
             if (stage == furthest) {
                 break;
             }
         }
         if (outcome != Outcome.ACTIVE) {
-            events.add(new StageEvent(job, Stage.FINALIZED, Instant.now(), null));
+            detail.recordStage(Stage.FINALIZED, at, null);
         }
-        return events;
+        for (InterviewRound round : rounds) {
+            detail.addInterview(round);
+        }
+        return new JobJourney(detail.getJobId(), detail.getStageHistory(), detail.getInterviews());
     }
 
-    private StageEvent newInterviewRound(Job job, InterviewType type) {
-        StageEvent event = new StageEvent(job, Stage.INTERVIEW_STAGE, Instant.now(), null);
-        event.applyInterviewDetails(Instant.now(), type, null, null, Collections.emptyList());
-        return event;
+    private InterviewRound round(InterviewType type) {
+        return round(type, T0);
     }
 
     // Explicit interviewDateTime lets a test drive the data-driven Sankey order via timestamps.
-    private StageEvent newInterviewRound(Job job, InterviewType type, Instant interviewDateTime) {
-        StageEvent event = new StageEvent(job, Stage.INTERVIEW_STAGE, Instant.now(), null);
-        event.applyInterviewDetails(interviewDateTime, type, null, null, Collections.emptyList());
-        return event;
+    private InterviewRound round(InterviewType type, Instant interviewDateTime) {
+        return new InterviewRound(interviewDateTime, type, null, null, List.of());
     }
 
     @Test
     void funnelCountsJobsThatReachedEachStageOrFurther() {
         User owner = new User("alice", "hash");
-        Source source = new Source(SourceCategory.SELF_APPLIED);
+        SourceCategory source = SourceCategory.SELF_APPLIED;
         Job resumeCheck = newJob(owner, source, Stage.RESUME_CHECK, Outcome.ACTIVE);
         Job interviewStage = newJob(owner, source, Stage.INTERVIEW_STAGE, Outcome.ACTIVE);
         Job offerExtended = newJob(owner, source, Stage.OFFER_STAGE, Outcome.REJECTED);
-        when(jobs.findByOwnerIdOrderByCreatedAtDesc(1L)).thenReturn(List.of(resumeCheck, interviewStage, offerExtended));
-
-        List<StageEvent> history = new ArrayList<>();
-        history.addAll(stageHistory(resumeCheck, Stage.RESUME_CHECK, Outcome.ACTIVE));
-        history.addAll(stageHistory(interviewStage, Stage.INTERVIEW_STAGE, Outcome.ACTIVE));
-        history.addAll(stageHistory(offerExtended, Stage.OFFER_STAGE, Outcome.REJECTED));
-        when(stageEvents.findAllByJobOwnerId(1L)).thenReturn(history);
+        when(jobs.findByOwnerIdOrderByCreatedAtDesc(1L))
+                .thenReturn(List.of(resumeCheck, interviewStage, offerExtended));
+        when(jobDetails.findJourneysByOwnerId(1L)).thenReturn(List.of(
+                detail(resumeCheck, Stage.RESUME_CHECK, Outcome.ACTIVE),
+                detail(interviewStage, Stage.INTERVIEW_STAGE, Outcome.ACTIVE),
+                detail(offerExtended, Stage.OFFER_STAGE, Outcome.REJECTED)));
 
         MetricsResponse response = metricsService.getMetrics(1L);
 
@@ -108,11 +115,11 @@ class MetricsServiceTests {
     @Test
     void sankeyRejectedAtResumeCheckWithNoRoundsFlowsStraightToRejected() {
         User owner = new User("bob", "hash");
-        Source source = new Source(SourceCategory.SELF_APPLIED);
+        SourceCategory source = SourceCategory.SELF_APPLIED;
         Job rejectedAtResume = newJob(owner, source, Stage.RESUME_CHECK, Outcome.REJECTED);
         when(jobs.findByOwnerIdOrderByCreatedAtDesc(1L)).thenReturn(List.of(rejectedAtResume));
-        when(stageEvents.findAllByJobOwnerId(1L))
-                .thenReturn(stageHistory(rejectedAtResume, Stage.RESUME_CHECK, Outcome.REJECTED));
+        when(jobDetails.findJourneysByOwnerId(1L))
+                .thenReturn(List.of(detail(rejectedAtResume, Stage.RESUME_CHECK, Outcome.REJECTED)));
 
         MetricsResponse response = metricsService.getMetrics(1L);
 
@@ -125,15 +132,14 @@ class MetricsServiceTests {
     @Test
     void sankeyInterviewJourneyThroughRoundsAndPanelToAcceptedOffer() {
         User owner = new User("dave", "hash");
-        Source source = new Source(SourceCategory.SELF_APPLIED);
+        SourceCategory source = SourceCategory.SELF_APPLIED;
         Job accepted = newJob(owner, source, Stage.OFFER_STAGE, Outcome.OFFER_ACCEPTED);
         when(jobs.findByOwnerIdOrderByCreatedAtDesc(1L)).thenReturn(List.of(accepted));
         // Increasing timestamps so the data-driven order places SYSTEM_DESIGN before PANEL.
-        Instant base = Instant.parse("2026-01-01T00:00:00Z");
-        List<StageEvent> history = new ArrayList<>(stageHistory(accepted, Stage.OFFER_STAGE, Outcome.OFFER_ACCEPTED));
-        history.add(newInterviewRound(accepted, InterviewType.SYSTEM_DESIGN, base));
-        history.add(newInterviewRound(accepted, InterviewType.PANEL_BEHAVIOR, base.plusSeconds(3600)));
-        when(stageEvents.findAllByJobOwnerId(1L)).thenReturn(history);
+        when(jobDetails.findJourneysByOwnerId(1L)).thenReturn(List.of(
+                detail(accepted, Stage.OFFER_STAGE, Outcome.OFFER_ACCEPTED,
+                        round(InterviewType.SYSTEM_DESIGN, T0),
+                        round(InterviewType.PANEL_BEHAVIOR, T0.plusSeconds(3600)))));
 
         MetricsResponse response = metricsService.getMetrics(1L);
 
@@ -153,20 +159,16 @@ class MetricsServiceTests {
     @Test
     void sankeyRoundOrderIsDrivenByEventTimestampsNotCanonicalOrder() {
         User owner = new User("grace", "hash");
-        Source source = new Source(SourceCategory.SELF_APPLIED);
+        SourceCategory source = SourceCategory.SELF_APPLIED;
         // Both jobs run BEHAVIOR before SYSTEM_DESIGN; canonical order is the reverse, so timestamps must win.
         Job jobA = newJob(owner, source, Stage.INTERVIEW_STAGE, Outcome.REJECTED);
         Job jobB = newJob(owner, source, Stage.INTERVIEW_STAGE, Outcome.REJECTED);
         when(jobs.findByOwnerIdOrderByCreatedAtDesc(1L)).thenReturn(List.of(jobA, jobB));
-        Instant base = Instant.parse("2026-01-01T00:00:00Z");
-        List<StageEvent> history = new ArrayList<>();
-        history.addAll(stageHistory(jobA, Stage.INTERVIEW_STAGE, Outcome.REJECTED));
-        history.addAll(stageHistory(jobB, Stage.INTERVIEW_STAGE, Outcome.REJECTED));
-        history.add(newInterviewRound(jobA, InterviewType.BEHAVIOR, base));
-        history.add(newInterviewRound(jobA, InterviewType.SYSTEM_DESIGN, base.plusSeconds(3600)));
-        history.add(newInterviewRound(jobB, InterviewType.BEHAVIOR, base));
-        history.add(newInterviewRound(jobB, InterviewType.SYSTEM_DESIGN, base.plusSeconds(3600)));
-        when(stageEvents.findAllByJobOwnerId(1L)).thenReturn(history);
+        when(jobDetails.findJourneysByOwnerId(1L)).thenReturn(List.of(
+                detail(jobA, Stage.INTERVIEW_STAGE, Outcome.REJECTED,
+                        round(InterviewType.BEHAVIOR, T0), round(InterviewType.SYSTEM_DESIGN, T0.plusSeconds(3600))),
+                detail(jobB, Stage.INTERVIEW_STAGE, Outcome.REJECTED,
+                        round(InterviewType.BEHAVIOR, T0), round(InterviewType.SYSTEM_DESIGN, T0.plusSeconds(3600)))));
 
         MetricsResponse response = metricsService.getMetrics(1L);
 
@@ -176,14 +178,11 @@ class MetricsServiceTests {
         assertThat(linkValue(response, "SYSTEM_DESIGN", "BEHAVIOR")).isEqualTo(0);
 
         // Reversing the timestamps reverses the emitted order.
-        List<StageEvent> reversedHistory = new ArrayList<>();
-        reversedHistory.addAll(stageHistory(jobA, Stage.INTERVIEW_STAGE, Outcome.REJECTED));
-        reversedHistory.addAll(stageHistory(jobB, Stage.INTERVIEW_STAGE, Outcome.REJECTED));
-        reversedHistory.add(newInterviewRound(jobA, InterviewType.SYSTEM_DESIGN, base));
-        reversedHistory.add(newInterviewRound(jobA, InterviewType.BEHAVIOR, base.plusSeconds(3600)));
-        reversedHistory.add(newInterviewRound(jobB, InterviewType.SYSTEM_DESIGN, base));
-        reversedHistory.add(newInterviewRound(jobB, InterviewType.BEHAVIOR, base.plusSeconds(3600)));
-        when(stageEvents.findAllByJobOwnerId(1L)).thenReturn(reversedHistory);
+        when(jobDetails.findJourneysByOwnerId(1L)).thenReturn(List.of(
+                detail(jobA, Stage.INTERVIEW_STAGE, Outcome.REJECTED,
+                        round(InterviewType.SYSTEM_DESIGN, T0), round(InterviewType.BEHAVIOR, T0.plusSeconds(3600))),
+                detail(jobB, Stage.INTERVIEW_STAGE, Outcome.REJECTED,
+                        round(InterviewType.SYSTEM_DESIGN, T0), round(InterviewType.BEHAVIOR, T0.plusSeconds(3600)))));
 
         MetricsResponse reversed = metricsService.getMetrics(1L);
 
@@ -195,13 +194,12 @@ class MetricsServiceTests {
     @Test
     void sankeySkipsInterviewRoundsWithNoType() {
         User owner = new User("frank", "hash");
-        Source source = new Source(SourceCategory.SELF_APPLIED);
+        SourceCategory source = SourceCategory.SELF_APPLIED;
         Job job = newJob(owner, source, Stage.INTERVIEW_STAGE, Outcome.REJECTED);
         when(jobs.findByOwnerIdOrderByCreatedAtDesc(1L)).thenReturn(List.of(job));
         // A scheduled interview with no chosen type must not crash and must add no type node.
-        List<StageEvent> history = new ArrayList<>(stageHistory(job, Stage.INTERVIEW_STAGE, Outcome.REJECTED));
-        history.add(newInterviewRound(job, null));
-        when(stageEvents.findAllByJobOwnerId(1L)).thenReturn(history);
+        when(jobDetails.findJourneysByOwnerId(1L)).thenReturn(List.of(
+                detail(job, Stage.INTERVIEW_STAGE, Outcome.REJECTED, round(null))));
 
         MetricsResponse response = metricsService.getMetrics(1L);
 
@@ -213,11 +211,11 @@ class MetricsServiceTests {
     @Test
     void activeJobStillAtResumeCheckFlowsToInProgress() {
         User owner = new User("carol", "hash");
-        Source source = new Source(SourceCategory.SELF_APPLIED);
+        SourceCategory source = SourceCategory.SELF_APPLIED;
         Job resumeCheck = newJob(owner, source, Stage.RESUME_CHECK, Outcome.ACTIVE);
         when(jobs.findByOwnerIdOrderByCreatedAtDesc(1L)).thenReturn(List.of(resumeCheck));
-        when(stageEvents.findAllByJobOwnerId(1L))
-                .thenReturn(stageHistory(resumeCheck, Stage.RESUME_CHECK, Outcome.ACTIVE));
+        when(jobDetails.findJourneysByOwnerId(1L))
+                .thenReturn(List.of(detail(resumeCheck, Stage.RESUME_CHECK, Outcome.ACTIVE)));
 
         MetricsResponse response = metricsService.getMetrics(1L);
 
@@ -228,17 +226,16 @@ class MetricsServiceTests {
     @Test
     void sankeyActiveJobsFlowToInProgressSoNodeTotalsCountEveryJob() {
         User owner = new User("ivan", "hash");
-        Source source = new Source(SourceCategory.SELF_APPLIED);
+        SourceCategory source = SourceCategory.SELF_APPLIED;
         // Every job gets a terminal, so Resume Check's outgoing links must sum to the full job count.
         Job activeOne = newJob(owner, source, Stage.RESUME_CHECK, Outcome.ACTIVE, "Acme");
         Job activeTwo = newJob(owner, source, Stage.RESUME_CHECK, Outcome.ACTIVE, "Globex");
         Job rejected = newJob(owner, source, Stage.RESUME_CHECK, Outcome.REJECTED, "Initech");
         when(jobs.findByOwnerIdOrderByCreatedAtDesc(1L)).thenReturn(List.of(activeOne, activeTwo, rejected));
-        List<StageEvent> history = new ArrayList<>();
-        history.addAll(stageHistory(activeOne, Stage.RESUME_CHECK, Outcome.ACTIVE));
-        history.addAll(stageHistory(activeTwo, Stage.RESUME_CHECK, Outcome.ACTIVE));
-        history.addAll(stageHistory(rejected, Stage.RESUME_CHECK, Outcome.REJECTED));
-        when(stageEvents.findAllByJobOwnerId(1L)).thenReturn(history);
+        when(jobDetails.findJourneysByOwnerId(1L)).thenReturn(List.of(
+                detail(activeOne, Stage.RESUME_CHECK, Outcome.ACTIVE),
+                detail(activeTwo, Stage.RESUME_CHECK, Outcome.ACTIVE),
+                detail(rejected, Stage.RESUME_CHECK, Outcome.REJECTED)));
 
         MetricsResponse response = metricsService.getMetrics(1L);
 
@@ -257,7 +254,7 @@ class MetricsServiceTests {
     @Test
     void outcomeCountsExcludeActiveAndCountEachTerminalOutcome() {
         User owner = new User("erin", "hash");
-        Source source = new Source(SourceCategory.SELF_APPLIED);
+        SourceCategory source = SourceCategory.SELF_APPLIED;
         Job rejected = newJob(owner, source, Stage.OFFER_STAGE, Outcome.REJECTED);
         Job rejectedAgain = newJob(owner, source, Stage.INTERVIEW_STAGE, Outcome.REJECTED);
         Job active = newJob(owner, source, Stage.RESUME_CHECK, Outcome.ACTIVE);
@@ -274,13 +271,14 @@ class MetricsServiceTests {
     @Test
     void interviewRoundCountsGroupScheduledRoundsByType() {
         User owner = new User("frank", "hash");
-        Source source = new Source(SourceCategory.SELF_APPLIED);
+        SourceCategory source = SourceCategory.SELF_APPLIED;
         Job job = newJob(owner, source, Stage.INTERVIEW_STAGE, Outcome.ACTIVE);
         when(jobs.findByOwnerIdOrderByCreatedAtDesc(1L)).thenReturn(List.of(job));
-        when(stageEvents.findAllByJobOwnerId(1L)).thenReturn(List.of(
-                newInterviewRound(job, InterviewType.TECHNICAL_PHONE_SCREEN),
-                newInterviewRound(job, InterviewType.SYSTEM_DESIGN),
-                newInterviewRound(job, InterviewType.SYSTEM_DESIGN)));
+        when(jobDetails.findJourneysByOwnerId(1L)).thenReturn(List.of(
+                detail(job, Stage.INTERVIEW_STAGE, Outcome.ACTIVE,
+                        round(InterviewType.TECHNICAL_PHONE_SCREEN),
+                        round(InterviewType.SYSTEM_DESIGN),
+                        round(InterviewType.SYSTEM_DESIGN))));
 
         MetricsResponse response = metricsService.getMetrics(1L);
 
@@ -292,17 +290,14 @@ class MetricsServiceTests {
     @Test
     void companiesByNodeMapsEachNodeToTheDistinctCompaniesThatFlowThroughIt() {
         User owner = new User("heidi", "hash");
-        Source source = new Source(SourceCategory.SELF_APPLIED);
+        SourceCategory source = SourceCategory.SELF_APPLIED;
         // Only Acme has a SYSTEM_DESIGN round, so only Acme should appear under that node.
         Job acme = newJob(owner, source, Stage.INTERVIEW_STAGE, Outcome.REJECTED, "Acme");
         Job globex = newJob(owner, source, Stage.INTERVIEW_STAGE, Outcome.REJECTED, "Globex");
         when(jobs.findByOwnerIdOrderByCreatedAtDesc(1L)).thenReturn(List.of(acme, globex));
-        List<StageEvent> history = new ArrayList<>();
-        history.addAll(stageHistory(acme, Stage.INTERVIEW_STAGE, Outcome.REJECTED));
-        history.addAll(stageHistory(globex, Stage.INTERVIEW_STAGE, Outcome.REJECTED));
-        Instant base = Instant.parse("2026-01-01T00:00:00Z");
-        history.add(newInterviewRound(acme, InterviewType.SYSTEM_DESIGN, base));
-        when(stageEvents.findAllByJobOwnerId(1L)).thenReturn(history);
+        when(jobDetails.findJourneysByOwnerId(1L)).thenReturn(List.of(
+                detail(acme, Stage.INTERVIEW_STAGE, Outcome.REJECTED, round(InterviewType.SYSTEM_DESIGN, T0)),
+                detail(globex, Stage.INTERVIEW_STAGE, Outcome.REJECTED)));
 
         MetricsResponse response = metricsService.getMetrics(1L);
 
@@ -319,15 +314,14 @@ class MetricsServiceTests {
     @Test
     void companiesByNodeCountsMultipleJobsAtTheSameCompany() {
         User owner = new User("judy", "hash");
-        Source source = new Source(SourceCategory.SELF_APPLIED);
+        SourceCategory source = SourceCategory.SELF_APPLIED;
         // Two jobs at the same company must count it twice, not dedupe to one entry.
         Job cortexOne = newJob(owner, source, Stage.RESUME_CHECK, Outcome.REJECTED, "Cortex");
         Job cortexTwo = newJob(owner, source, Stage.RESUME_CHECK, Outcome.REJECTED, "Cortex");
         when(jobs.findByOwnerIdOrderByCreatedAtDesc(1L)).thenReturn(List.of(cortexOne, cortexTwo));
-        List<StageEvent> history = new ArrayList<>();
-        history.addAll(stageHistory(cortexOne, Stage.RESUME_CHECK, Outcome.REJECTED));
-        history.addAll(stageHistory(cortexTwo, Stage.RESUME_CHECK, Outcome.REJECTED));
-        when(stageEvents.findAllByJobOwnerId(1L)).thenReturn(history);
+        when(jobDetails.findJourneysByOwnerId(1L)).thenReturn(List.of(
+                detail(cortexOne, Stage.RESUME_CHECK, Outcome.REJECTED),
+                detail(cortexTwo, Stage.RESUME_CHECK, Outcome.REJECTED)));
 
         MetricsResponse response = metricsService.getMetrics(1L);
 
@@ -335,6 +329,78 @@ class MetricsServiceTests {
                 .containsOnly(entry("Cortex", 2));
         assertThat(response.companiesByNode().get("REJECTED"))
                 .containsOnly(entry("Cortex", 2));
+    }
+
+    @Test
+    void reopeningAfterAFinalizeCountsOnlyTheLiveAttempt() {
+        User owner = new User("erin", "hash");
+        SourceCategory source = SourceCategory.SELF_APPLIED;
+        // Presumed ghosted after silence, then the company replied, so it is back at Interview Request and active.
+        Job reopened = newJob(owner, source, Stage.INTERVIEW_REQUEST, Outcome.ACTIVE);
+        when(jobs.findByOwnerIdOrderByCreatedAtDesc(1L)).thenReturn(List.of(reopened));
+
+        Instant base = Instant.parse("2026-07-29T00:00:00Z");
+        JobDetail detail = new JobDetail(reopened.getId(), 1L, null, null);
+        detail.recordStage(Stage.RESUME_CHECK, base, null);
+        detail.recordStage(Stage.INTERVIEW_REQUEST, base.plusSeconds(60), null);
+        detail.recordStage(Stage.INTERVIEW_STAGE, base.plusSeconds(120), null);
+        detail.recordStage(Stage.FINALIZED, base.plusSeconds(180), null);
+        detail.recordStage(Stage.WAITING_INTERVIEW_RESULTS, base.plusSeconds(240), null);
+        detail.recordStage(Stage.INTERVIEW_REQUEST, base.plusSeconds(300), null);
+        when(jobDetails.findJourneysByOwnerId(1L)).thenReturn(List.of(journey(detail)));
+
+        MetricsResponse response = metricsService.getMetrics(1L);
+
+        assertThat(countFor(response, Stage.RESUME_CHECK)).isEqualTo(1);
+        assertThat(countFor(response, Stage.INTERVIEW_REQUEST)).isEqualTo(1);
+        // Interview Stage belongs to the retracted attempt, Waiting Results was stepped back down.
+        assertThat(countFor(response, Stage.INTERVIEW_STAGE)).isEqualTo(0);
+        assertThat(countFor(response, Stage.WAITING_INTERVIEW_RESULTS)).isEqualTo(0);
+        assertThat(outcomeCountFor(response, Outcome.REJECTED)).isEqualTo(0);
+        assertThat(linkValue(response, "INTERVIEW_REQUEST", "IN_PROGRESS")).isEqualTo(1);
+        assertThat(response.sankeyLinks()).extracting(SankeyLink::target).doesNotContain("REJECTED");
+    }
+
+    @Test
+    void aStillClosedJobKeepsItsFullHistory() {
+        User owner = new User("frank", "hash");
+        SourceCategory source = SourceCategory.SELF_APPLIED;
+        Job rejected = newJob(owner, source, Stage.FINALIZED, Outcome.REJECTED);
+        when(jobs.findByOwnerIdOrderByCreatedAtDesc(1L)).thenReturn(List.of(rejected));
+
+        Instant base = Instant.parse("2026-07-29T00:00:00Z");
+        JobDetail detail = new JobDetail(rejected.getId(), 1L, null, null);
+        detail.recordStage(Stage.RESUME_CHECK, base, null);
+        detail.recordStage(Stage.INTERVIEW_REQUEST, base.plusSeconds(60), null);
+        detail.recordStage(Stage.INTERVIEW_STAGE, base.plusSeconds(120), null);
+        detail.recordStage(Stage.FINALIZED, base.plusSeconds(180), null);
+        when(jobDetails.findJourneysByOwnerId(1L)).thenReturn(List.of(journey(detail)));
+
+        MetricsResponse response = metricsService.getMetrics(1L);
+
+        assertThat(countFor(response, Stage.INTERVIEW_STAGE)).isEqualTo(1);
+        assertThat(linkValue(response, "INTERVIEW_REQUEST", "REJECTED")).isEqualTo(1);
+    }
+
+    @Test
+    void steppingAJobBackDownWithoutFinalizingCountsItAtItsCurrentStage() {
+        User owner = new User("gina", "hash");
+        SourceCategory source = SourceCategory.SELF_APPLIED;
+        Job steppedBack = newJob(owner, source, Stage.INTERVIEW_REQUEST, Outcome.ACTIVE);
+        when(jobs.findByOwnerIdOrderByCreatedAtDesc(1L)).thenReturn(List.of(steppedBack));
+
+        Instant base = Instant.parse("2026-07-29T00:00:00Z");
+        JobDetail detail = new JobDetail(steppedBack.getId(), 1L, null, null);
+        detail.recordStage(Stage.RESUME_CHECK, base, null);
+        detail.recordStage(Stage.INTERVIEW_REQUEST, base.plusSeconds(60), null);
+        detail.recordStage(Stage.INTERVIEW_STAGE, base.plusSeconds(120), null);
+        detail.recordStage(Stage.INTERVIEW_REQUEST, base.plusSeconds(180), null);
+        when(jobDetails.findJourneysByOwnerId(1L)).thenReturn(List.of(journey(detail)));
+
+        MetricsResponse response = metricsService.getMetrics(1L);
+
+        assertThat(countFor(response, Stage.INTERVIEW_REQUEST)).isEqualTo(1);
+        assertThat(countFor(response, Stage.INTERVIEW_STAGE)).isEqualTo(0);
     }
 
     private long interviewRoundCountFor(MetricsResponse response, InterviewType type) {
